# karst

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_agent_pdf.py  pyproject.toml  server.json
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml
coderchecker/: analyze.py  ask.py  cli.py  embedder.py  graph_cli.py  indexer.py  manifest.py  mcp_server.py  packs_cli.py  review_cli.py  state.py  store.py  tokens.py
coderchecker/graph/: __init__.py  builder.py  imports.py  store.py
coderchecker/packs/: models.py  store.py
coderchecker/review/: github.py
dashboard/: .env.example  .gitignore  Dockerfile  README.md  SOCIAL.md  fly.toml  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: DataTable.tsx  EmptyState.tsx  KpiCard.tsx  Logo.tsx  MarkdownView.tsx  Sidebar.tsx  SidebarClient.tsx  Topbar.tsx
dashboard/lib/: actions.ts  auth.ts  checklist.json  cors.ts  db.ts  email.ts  format.ts  ingestAuth.ts  migrate.ts  pypistats.ts  ratelimit.ts  seed.ts
dashboard/scripts/: find-dashboard-db.mjs  gen-password-hash.mjs  set-admin-password.mjs
docs/: ARCHITECTURE.md  DEPLOY.md  FOR-VIBE-CODERS.md  MCP.md  SELF-HOSTED.md  WHY.md
docs/compliance/: AIR-GAP-INSTALL.md  README.md  SECURITY-QUESTIONNAIRE.md  SECURITY.md
enterprise/: .dockerignore  DEPLOY.md  Dockerfile  README.md  __init__.py  docker-compose.yml  requirements.txt
enterprise/gateway/: __init__.py  cli.py  db.py  keys.py  middleware.py  oidc.py  packs.py  serve.py  usage.py
enterprise/tests/: test_gateway.py
integrations/n8n/: README.md  _build.mjs  karst-social-generate.json
karst/: __init__.py  __main__.py  _tsapi.py  ask.py  chunker.py  cli.py  embedder.py  embedding_cache.py  graph_cli.py  languages.py  llm.py  mcp_server.py  models.py  packs_cli.py  parser.py  review_cli.py  store.py  tokens.py  walker.py
karst/graph/: builder.py  calls.py  graphrag.py  impact.py  imports.py  inherits.py  store.py
karst/packs/: __init__.py  suggest.py  tagger.py
karst/review/: __init__.py  agent.py  context.py  diff.py  findings.py  github.py
landing/: README.md  how-it-works.html  index.html  package.json  robots.txt  sitemap.xml  vercel.json
landing/guides/: ARCHITECTURE.html  ARCHITECTURE.md  CONNECT.html  CONNECT.md  COOKBOOK.html  COOKBOOK.md  FOR-VIBE-CODERS.html  MCP.html  QUICKSTART.html  WHY.html  (+3 more)
marketing/: CONTENT-CALENDAR.md  VIDEO-SCRIPTS.md
tests/: mcp_client_smoke.py  test_chunker.py  test_cost_meter.py  test_e2e_smoke.py  test_embedder_batch.py  test_graph_builder.py  test_inherits.py  test_llm_local.py  test_manifest_and_cache.py  test_pack_scoped_retrieval.py  test_packs.py  test_rerank.py  test_review_agent.py  test_review_diff.py  test_review_findings.py  test_state.py  test_store.py
(+60 files in other folders)
