[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karst"
version = "0.2.1"
description = "Code context for AI dev tools — graph-grounded, pack-scoped retrieval over MCP. 60% fewer tokens, audit-grade citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "karst" }]
keywords = [
    "mcp", "model-context-protocol", "code-search", "rag", "graphrag",
    "tree-sitter", "code-intelligence", "ai", "llm", "cursor", "claude",
    "embeddings", "code-review", "impact-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7.3",
    "pathspec>=0.12",
    "fastembed>=0.4",
    "qdrant-client>=1.12",
    "unidiff>=0.7.5",
    "networkx>=3.2",
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/Moin105/upgraded-garbanzo"
Repository = "https://github.com/Moin105/upgraded-garbanzo"
Issues = "https://github.com/Moin105/upgraded-garbanzo/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.50"]
llm = ["anthropic>=0.39", "openai>=1.50"]
dev = [
    "pytest>=8",
]

[project.scripts]
karst = "karst.cli:main"
karst-mcp = "karst.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["karst*"]
